import controller.Game;

public class GameMain {
    public static void main(String[] args) {
        Game game = new Game();
    }
}
