package model;

public interface MoneyObserver {
   public abstract void updateMoney(int money); 
}
