package model;

public interface WeightObserver {
    public abstract void updateWeight(int weight);
}
